--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="">HOME</a>
+                            <a href=".aboutMe">HOME</a>
                         </li>
                         <li>
-                            <a href="">ABOUT ME</a>
+                            <a href=".right-about-me">ABOUT ME</a>
                         </li>
                         <li>
-                            <a href="">SERVICES</a>
+                            <a href=".services1">SERVICES</a>
                         </li>
                         <li>
-                            <a href="">CONTACT</a>
+                            <a href="contact-section">CONTACT</a>
                         </li>
                     </ul>
                 </nav>
